Stratification factor usage status feature (#1037)
* stratification factor usage status feature

* migration file for stratification factor status and remove cascade delete

* removed the unsed code

* peer review changes for SRS status

* boolean for stratification factor usage status as per peer review

* remove unused stratification factor usage enum

* missed removing stratification usage status enum import

---------

Co-authored-by: Yagnik <yagnikhingrajiya56@gmail.com>

--- a/frontend/projects/upgrade/src/app/features/dashboard/experiment-users/components/stratification-factor-list/stratification-factor-list.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiment-users/components/stratification-factor-list/stratification-factor-list.component.html
@@ -1,7 +1,7 @@
 <div class="stratification-factors-list-container">
   <div class="header">
     <div>
-        <h3 class="ft-22-700">{{ 'users.stratification-users-title.text' | translate }}</h3>
+      <h3 class="ft-22-700">{{ 'users.stratification-users-title.text' | translate }}</h3>
     </div>
     <div>
       <button
@@ -21,33 +21,55 @@
       <!-- Factor Column -->
       <ng-container matColumnDef="factor">
         <mat-header-cell class="ft-12-700" *matHeaderCellDef>
-          <span [matTooltip]="'stratifications.global-members-factor.text' | translate" matTooltipPosition="above">
+          <span>
             {{ 'stratifications.global-members-factor.text' | translate | uppercase }}
           </span>
         </mat-header-cell>
         <mat-cell class="ft-12-600" *matCellDef="let rowData; let rowIndex = index"> {{ rowData.factor }} </mat-cell>
       </ng-container>
 
+      <!-- Status Column -->
+      <ng-container matColumnDef="status">
+        <mat-header-cell class="ft-12-700" *matHeaderCellDef>
+          <span
+            [matTooltip]="'stratifications.global-members-status-tooltip.text' | translate"
+            matTooltipPosition="above"
+          >
+            {{ 'stratifications.global-members-status.text' | translate | uppercase }}
+          </span>
+        </mat-header-cell>
+        <mat-cell
+          class="ft-12-600"
+          *matCellDef="let rowData; let rowIndex = index"
+          [matTooltip]="getExperimentIdsTooltip(rowData.experimentIds)"
+          matTooltipPosition="above"
+        >
+          <span
+            class="status-circle"
+            [ngStyle]="{
+              'background-color': rowData.isUsed ? '#829CF8' : '#D8D8D8'
+            }"
+          ></span>
+          <span>{{ rowData.isUsed ? 'Used' : 'Unused' }}</span>
+        </mat-cell>
+      </ng-container>
+
       <!-- Summary Column -->
       <ng-container matColumnDef="summary">
         <mat-header-cell class="ft-12-700" *matHeaderCellDef>
-          <span [matTooltip]="'stratifications.global-members-summary.text' | translate" matTooltipPosition="above">
+          <span>
             {{ 'stratifications.global-members-summary.text' | translate | uppercase }}
           </span>
         </mat-header-cell>
         <mat-cell class="ft-12-600" *matCellDef="let rowData; let rowIndex = index"> {{ rowData.summary }} </mat-cell>
       </ng-container>
 
-      <!-- Action buttons Column-->>
+      <!-- Action buttons Column-->
       <ng-container matColumnDef="actions">
         <mat-header-cell *matHeaderCellDef class="ft-14-700"></mat-header-cell>
         <mat-cell *matCellDef="let rowData; let rowIndex = index" class="actions-cell">
           <!-- Download Icon -->
-          <button
-            type="button"
-            class="row-action-btn"
-            (click)="handleDownload(rowData)"
-          >
+          <button type="button" class="row-download-btn" (click)="handleDownload(rowData)">
             <ng-container>
               <mat-icon class="icon">download</mat-icon>
             </ng-container>
@@ -55,11 +77,13 @@
           <!-- Delete Icon -->
           <button
             type="button"
-            class="row-action-btn"
+            class="row-delete-btn"
+            [ngClass]="{ 'row-delete-btn--disabled': rowData.isUsed }"
+            [disabled]="rowData.isUsed"
             (click)="handleDelete(rowData)"
           >
             <ng-container>
-              <mat-icon class="icon">delete</mat-icon>
+              <mat-icon class="icon">delete_outline</mat-icon>
             </ng-container>
           </button>
         </mat-cell>
