Stratification Factor Feature (#989)
* stratification tab, table and import csv button and dialog box with cancel fuctionality done

* stratification factor delete pop up and import popup fix

* added stratification backend model changes

* stratification drop down in experiment overview

* Added experiment-stratification connections

* added stratification validator

* creating stratificationFactor when not found

* solve updating experiment issue

* added userStratificationRepo

* stratification drop down and summary format in table

* fetch stratification factor store

* resolved store issue for stratification table fetch

* Updated stratification controller APIs

* delete factors from view feature

* completed all stratification controller and service

* export factor store actions

* solve csv download related errors

* fetch, delete and download stratification factors functionality

* upload strata csv feature

* solve stratificationFactor creating multiple doc

* solve empty string as factorValue error

* fixing frontend test cases

* fixing backend test cases

* solved srs bugs

* page refresh on importing strata factor

* solve experiment creation bug

* import, export SRS experiment and setting random assign algo as default

* adding stratification details and experiment design type on details page

* added stratificationAlgorithm for assignment

* fixed backend unit and integration test cases

* refresh strata factor on import and delete, error not selecting factor in overview, select single file in import

* removed N/A data & removed id from stratificationFactor

* make assignmentAlogrithm optional

* N/A and factorId removing model changes, error on importing experiment with factor which don't exist

* backend integration test cases for stratification

* change stratificationFactorName name as FK in db

* added swagger for stratification

* solve empty csv upload error

* updat

--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-overview/experiment-overview.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-overview/experiment-overview.component.html
@@ -82,6 +82,26 @@
         </mat-select>
       </mat-form-field>
 
+      <div class="stratification-container">
+        <mat-form-field class="ft-14-600 assignment-algorithm">
+          <mat-label>{{ 'home-global.assignment-algorithm.text' | translate }}</mat-label>
+          <mat-select class="ft-14-400" formControlName="assignmentAlgorithm">
+            <mat-option *ngFor="let assignmentAlgorithm of assignmentAlgorithms" [value]="assignmentAlgorithm.value">
+              {{ assignmentAlgorithm.value | titlecase }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+
+        <mat-form-field class="ft-14-600 stratification-factor" *ngIf="assignmentAlgorithmValue === 'stratified random sampling'">
+          <mat-label>{{ 'home-global.stratification-factor.text' | translate }}</mat-label>
+          <mat-select class="ft-14-400" formControlName="stratificationFactor" [disabled]="!isExperimentEditable">
+            <mat-option *ngFor="let stratificationFactor of allStratificationFactors" [value]="stratificationFactor.factorName">
+              {{ stratificationFactor.factorName }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+
       <mat-form-field class="ft-14-600 tags">
         <mat-chip-list #tagsList aria-label="Tags" formControlName="tags">
           <mat-chip
@@ -106,6 +126,13 @@
         {{ 'home.view-experiment.logging.text' | translate }}
       </mat-checkbox>
     </form>
+    <div class="validation-container">
+      <span
+        class="ft-14-600 validation-message"
+        *ngIf="!isStratificationFactorSelected"
+        [innerHTML]="stratificationFactorNotSelectedMsg | translate"
+      ></span>
+    </div>
   </section>
 
   <section class="shared-modal--buttons-container">
