--- a/frontend/projects/upgrade/src/styles.scss
+++ b/frontend/projects/upgrade/src/styles.scss
@@ -55,6 +55,8 @@
 @import './app/features/dashboard/home/components/modal/import-experiment/import-experiment.theme.scss';
 @import './app/features/dashboard/home/components/modal/state-time-logs/state-time-logs.theme.scss';
 @import './app/features/dashboard/segments/components/modal/import-segment/import-segment.theme.scss';
+@import './app/features/dashboard/experiment-users/components/stratification-factor-list/import-stratifications/import-stratifications.theme.scss';
+@import './app/features/dashboard/experiment-users/components/stratification-factor-list/delete-stratification/delete-stratification.theme.scss';
 @import './app/features/dashboard/segments/components/modal/segment-experiment-list/segment-experiment-list.theme.scss';
 
 @mixin custom-components-theme($theme) {
@@ -93,6 +95,8 @@
   @include import-experiment-component-theme($theme);
   @include state-time-logs-modal-component-theme($theme);
   @include import-segment-component-theme($theme);
+  @include import-stratifications-component-theme($theme);
+  @include delete-stratifications-component-theme($theme);
   @include segment-experiment-list-modal-component-theme($theme);
 }
 
@@ -129,6 +133,7 @@
 .delete-modal,
 .import-experiment-modal,
 .import-segment-modal,
+.import-stratification-modal,
 .experiment-general-modal,
 .new-experiment-modal,
 .new-flag-modal,
@@ -144,6 +149,7 @@
 
   .mat-dialog-container {
     padding: 0px;
+    overflow: hidden !important;
   }
 }
 
@@ -175,7 +181,8 @@
 }
 
 .import-segment-modal,
-.import-experiment-modal {
+.import-experiment-modal,
+.import-stratification-modal {
   width: 500px;
 }
 
