--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/components/modal/import-segment/import-segment.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/components/modal/import-segment/import-segment.component.scss
@@ -5,6 +5,10 @@
     height: 88px;
   }
 
+  .import-message {
+    margin-top: 10px;
+  }
+
   .import-segment-body {
     margin: 20px 0;
     padding: 0 40px;
