Fix mat-drawer disableClose issue

--- a/frontend/projects/upgrade/src/app/features/dashboard/dashboard-root/dashboard-root.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/dashboard-root/dashboard-root.component.html
@@ -1,5 +1,5 @@
 <mat-drawer-container [class]="theme$ | async">
-  <mat-drawer mode="side" opened>
+  <mat-drawer mode="side" opened disableClose>
     <div class="drawer-container">
       <div class="logo">
         <a class="logo-link ft-36-800" [routerLink]="['/home']">UpGrade</a>
