--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-list/experiment-list.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-list/experiment-list.component.scss
@@ -131,7 +131,7 @@ $experiment-state-light-color: #8f9bb3;
           display: inline-block;
           margin-right: 6px;
           border-radius: 50%;
-          width: 12px;
+          min-width: 12px;
           height: 12px;
         }
 
