remove dark theme elements, leaving light-theme constructs in place

--- a/frontend/projects/upgrade/src/app/features/dashboard/dashboard-root/dashboard-root.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/dashboard-root/dashboard-root.component.html
@@ -1,4 +1,4 @@
-<mat-drawer-container [class]="theme$ | async">
+<mat-drawer-container [class]="'light-theme'">
   <mat-drawer mode="side" opened disableClose>
     <div class="drawer-container">
       <div class="logo">
