--- a/frontend/projects/upgrade/src/app/features/auth/login/login.component.html
+++ b/frontend/projects/upgrade/src/app/features/auth/login/login.component.html
@@ -1,10 +1,8 @@
-<div [class]="(theme$ | async) + ' ' + 'login-theme'">
+<div class="light-theme login-theme">
   <div class="login-container">
     <mat-card class="login">
       <div class="login-info-container">
-        <app-shared-icons
-          [iconType]="(theme$ | async) === ThemeOptions.DARK_THEME ? 'login-dark' : 'login-light'"
-        ></app-shared-icons>
+        <app-shared-icons [iconType]="'login-light'"></app-shared-icons>
         <div class="login-info">
           <span class="login-info__title ft-36-800">{{ 'global.app.name' | translate }}</span>
           <span class="login-info__description ft-16-700">{{ 'global.app.description' | translate }}</span>
