mdc migration: Card (use raised instead of outlined)

--- a/frontend/projects/upgrade/src/app/features/auth/login/login.component.html
+++ b/frontend/projects/upgrade/src/app/features/auth/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="light-theme login-theme">
   <div class="login-container">
-    <mat-card class="login">
+    <mat-card appearance="raised" class="login">
       <div class="login-info-container">
         <app-shared-icons [iconType]="'login-light'"></app-shared-icons>
         <div class="login-info">
