--- a/frontend/projects/upgrade/src/app/features/dashboard/profile/components/metrics/metrics.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/profile/components/metrics/metrics.component.html
@@ -1,4 +1,4 @@
-<mat-card class="metrics-container">
+<mat-card appearance="raised" class="metrics-container">
   <div class="header">
     <mat-form-field>
       <input
