--- a/frontend/projects/upgrade/src/app/features/dashboard/experiment-users/experiment-users-root/experiment-users-root.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiment-users/experiment-users-root/experiment-users-root.component.html
@@ -1,8 +1,8 @@
-<mat-card class="tabs-container users-container">
+<mat-card appearance="raised" class="tabs-container users-container">
   <h1 class="ft-32-700 title">{{ 'users.main-heading.text' | translate }}</h1>
   <span class="ft-16-400 subtitle" [innerHTML]="'users.sub-heading.text' | translate"></span>
 
-  <mat-card class="tabs-wrapper">
+  <mat-card appearance="raised" class="tabs-wrapper">
     <mat-tab-group disableRipple="true" (selectedTabChange)="selectedTabChange($event)">
       <!-- <mat-tab [label]="'users.experiment-users-title.text' | translate">
         <users-experiment-users></users-experiment-users>
