--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-list/experiment-list.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-list/experiment-list.component.html
@@ -1,4 +1,4 @@
-<mat-card class="experiments-list-container">
+<mat-card appearance="raised" class="experiments-list-container">
   <div class="header">
     <div>
       <mat-form-field class="filter-options">
