--- a/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.html
@@ -1,11 +1,11 @@
-<mat-card class="experiment-container" *ngIf="experiment">
+<mat-card appearance="raised" class="experiment-container" *ngIf="experiment">
   <span class="ft-16-400">
     <a [routerLink]="['/home']" class="ft-16-400 experiment-link"
       >{{ 'home.view-experiment.experiments.text' | translate }}
     </a>
     <b> {{ experiment?.name }} </b>
   </span>
-  <mat-card class="experiment">
+  <mat-card appearance="raised" class="experiment">
     <div class="experiment-info">
       <div class="experiment-overview">
         <span class="ft-32-700 experiment-overview-title">
