--- a/frontend/projects/upgrade/src/app/features/dashboard/home/root/home.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/root/home.component.html
@@ -1,13 +1,13 @@
-<mat-card class="experiments-container">
+<mat-card appearance="raised" class="experiments-container">
   <h1 class="title ft-32-700">{{ 'global.experiment.title' | translate }}</h1>
   <span class="subtitle ft-16-400" [innerHTML]="'home.experiment.text.subtitle' | translate"></span>
 
   <ng-container *ngIf="isLoadingExperiments$ | async; else loadingExperimentState">
-    <mat-card class="experiment-table" *ngIf="(experiments$ | async).length; else noExperimentTemplate">
+    <mat-card appearance="raised" class="experiment-table" *ngIf="(experiments$ | async).length; else noExperimentTemplate">
       <home-experiment-list></home-experiment-list>
     </mat-card>
     <ng-template #noExperimentTemplate>
-      <mat-card class="no-experiment-container">
+      <mat-card appearance="raised" class="no-experiment-container">
         <span class="text ft-24-600" [innerHTML]="'home.no-experiment.text' | translate"></span>
         <button
           mat-flat-button
