--- a/frontend/projects/upgrade/src/app/features/dashboard/profile/profile-root/profile-root.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/profile/profile-root/profile-root.component.html
@@ -1,8 +1,8 @@
-<mat-card class="tabs-container profile-container">
+<mat-card appearance="raised" class="tabs-container profile-container">
   <h1 class="ft-32-700 title">{{ 'profile.heading.text' | translate }}</h1>
   <span class="ft-16-400 subtitle" [innerHTML]="'profile.sub-heading.text' | translate"></span>
 
-  <mat-card class="tabs-wrapper">
+  <mat-card appearance="raised" class="tabs-wrapper">
     <mat-tab-group disableRipple="true">
       <mat-tab [label]="'profile.heading.text' | translate">
         <profile-info></profile-info>
