--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/components/segments-list/segments-list.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/components/segments-list/segments-list.component.html
@@ -1,4 +1,4 @@
-<mat-card class="segments-list-container">
+<mat-card appearance="raised" class="segments-list-container">
   <div class="header">
     <div>
       <mat-form-field class="filter-options">
