--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/segments-root/segments-root.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/segments-root/segments-root.component.html
@@ -1,12 +1,12 @@
-<mat-card class="segments-container">
+<mat-card appearance="raised" class="segments-container">
   <h1 class="title ft-32-700">{{ 'segments.title.text' | translate }}</h1>
   <span class="subtitle ft-16-400" [innerHTML]="'segments.subtitle.text' | translate"></span>
   <ng-container *ngIf="isLoadingSegments$ | async; else loadingSegmentState">
-    <mat-card class="segments-table" *ngIf="(segments$ | async).length; else noSegmentsTemplate">
+    <mat-card appearance="raised" class="segments-table" *ngIf="(segments$ | async).length; else noSegmentsTemplate">
       <segments-list></segments-list>
     </mat-card>
     <ng-template #noSegmentsTemplate>
-      <mat-card class="no-segments-container">
+      <mat-card appearance="raised" class="no-segments-container">
         <span class="text ft-24-600" [innerHTML]="'segments.no-segments.text' | translate"></span>
         <button
           mat-flat-button
