--- a/frontend/projects/upgrade/src/styles.scss
+++ b/frontend/projects/upgrade/src/styles.scss
@@ -236,9 +236,10 @@
   width: 805px;
 }
 
-.mat-button,
-.mat-flat-button,
-.mat-stroked-button {
+.mat-mdc-button,
+.mat-mdc-unelevated-button,
+.mat-mdc-outlined-button {
+  /* TODO(mdc-migration): The following rule targets internal classes of button that may no longer apply for the MDC version.*/
   &.cdk-program-focused .mat-button-focus-overlay {
     opacity: 0 !important;
   }
