--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/enrollment-over-time/enrollment-over-time.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/enrollment-over-time/enrollment-over-time.component.scss
@@ -20,7 +20,7 @@
 
     mat-form-field {
       margin-right: 20px;
-
+      /* TODO(mdc-migration): The following rule targets internal classes of checkbox that may no longer apply for the MDC version. */
       ::ng-deep .mat-checkbox-checked.mat-primary .mat-checkbox-background {
         background-color: var(--blue) !important;
       }
@@ -118,6 +118,7 @@
   }
 }
 
+/* TODO(mdc-migration): The following rule targets internal classes of checkbox that may no longer apply for the MDC version. */
 ::ng-deep .mat-option .mat-checkbox-layout,
 ::ng-deep .mat-option .mat-checkbox-label {
   width: 100% !important;
