--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/components/segments-list/segments-list.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/components/segments-list/segments-list.component.html
@@ -122,9 +122,9 @@
           </span>
         </th>
         <td class="ft-12-600" mat-cell *matCellDef="let segment">
-          <mat-chip-list>
-            <mat-chip class="ft-12-600" *ngIf="segment.context != 'ALL'"> {{ segment.context }} </mat-chip>
-          </mat-chip-list>
+          <mat-chip-listbox>
+            <mat-chip-option class="ft-12-600" *ngIf="segment.context != 'ALL'"> {{ segment.context }} </mat-chip-option>
+          </mat-chip-listbox>
           <span class="ft-12-600" *ngIf="segment.context == 'ALL'" style="margin-left: 10px">
             {{ segment.context }}
           </span>
