--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-overview/experiment-overview.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-overview/experiment-overview.component.html
@@ -103,8 +103,8 @@
       </div>
 
       <mat-form-field class="ft-14-600 tags">
-        <mat-chip-list #tagsList aria-label="Tags" formControlName="tags">
-          <mat-chip
+        <mat-chip-grid #tagsList aria-label="Tags" formControlName="tags">
+          <mat-chip-row
             *ngFor="let experimentTag of tags.value"
             [selectable]="isChipSelectable"
             [removable]="isChipRemovable"
@@ -112,7 +112,7 @@
           >
             {{ experimentTag }}
             <mat-icon matChipRemove *ngIf="isChipRemovable">cancel</mat-icon>
-          </mat-chip>
+          </mat-chip-row>
           <input
             [placeholder]="'home.new-experiment.overview.tags.placeHolder' | translate"
             [matChipInputFor]="tagsList"
@@ -120,7 +120,7 @@
             [matChipInputAddOnBlur]="addChipOnBlur"
             (matChipInputTokenEnd)="addChip($event, 'tags')"
           />
-        </mat-chip-list>
+        </mat-chip-grid>
       </mat-form-field>
       <mat-checkbox class="ft-13-700 logging" color="primary" formControlName="logging">
         {{ 'home.view-experiment.logging.text' | translate }}
