--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-overview/experiment-overview.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-overview/experiment-overview.component.scss
@@ -48,7 +48,7 @@
   .logging {
     margin-top: 5px;
   }
-
+  /* TODO(mdc-migration): The following rule targets internal classes of chips that may no longer apply for the MDC version. */
   ::ng-deep .mat-chip-list-wrapper {
     max-height: 60px;
     overflow: auto;
