--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/view-segment/view-segment.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/view-segment/view-segment.component.html
@@ -90,9 +90,9 @@
       <!-- Context -->
       <div class="section-data section-data--fixed">
         <span class="ft-16-600 section-data-title">{{ 'global.context.text' | translate }}</span>
-        <mat-chip-option class="ft-14-700" *ngIf="segment.context != 'ALL'">
+        <mat-chip class="ft-14-700" *ngIf="segment.context != 'ALL'">
           {{ segment.context }}
-        </mat-chip-option>
+        </mat-chip>
         <span class="ft-14-700 section-data-value" *ngIf="segment.context == 'ALL'">
           {{ segment.context }}
         </span>
